schema.org, final

--- a/src/pug/article__item.pug
+++ b/src/pug/article__item.pug
@@ -4,60 +4,64 @@ block meta
   - var title = 'Страница статьи (стандартная)';
 
 block wrapper
-  .wrapper
+  .wrapper(itemscope itemtype="http://schema.org/Article")
     block articles__section
       .section.d-flex.flex-wrap.overflow-hidden.px-lg-0.px-3.mb-5
         .col-lg-6.px-0
-          ul.pathway(itemscope="" itemtype="http://schema.org/BreadcrumbList").px-lg-5.px-md-4
-            li(itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem")
+          ul.pathway(itemscope itemtype="http://schema.org/BreadcrumbList").px-lg-5.px-md-4
+            li(itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem")
               a.pathway__link(href="#" itemprop="item")
                 span(itemprop="name") Главная
                 meta(itemprop="position" content="1")
-            li(itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem")
+            li(itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem")
               a.pathway__link(href="#" itemprop="item")
                 span(itemprop="name") Статьи
                 meta(itemprop="position" content="2")
-            li(itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem")
+            li(itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem")
               a.pathway__current(href="#" itemprop="item")
                 span(itemprop="name") Как самостоятельно заменить тормозную жидкость
                 meta(itemprop="position" content="3")
           .content.px-lg-5.px-md-4
             .color-theme-brand
-              h1(itemprop="name") Как самостоятельно заменить тормозную жидкость
-            .date.mb-2 30 ноября 2021
+              h1(itemprop="headline") Как самостоятельно заменить тормозную жидкость
+            .date.mb-2(itemprop="datePublished" datetime="2021-11-30") 30 ноября 2021
+            span.d-none(itemprop="author") ДонШина Ростов
+            //- ссылка на статью
+            link(itemprop="url" href="#")
           .section__picture.d-block.d-lg-none.mb-4
-            +img('content/media/media-7.jpg','img-cover')
+            +img('content/media/media-7.jpg','img-cover', true)
           .h4.px-lg-5.px-md-4 Любая часть в автомобиле имеет собственный ресурс и требует своевременной замены. Это же касается и тормозной жидкости. Ездить с расходниками, исчерпавшими свой ресурс, становится опасно — у автомобиля существенно увеличивается путь торможения, при резком снижении скорости колёса уходят в занос, а педаль тормоза начинает «проваливаться» и становится менее отзывчивой.
         .section__picture.col-lg-6.d-none.d-lg-block.px-0
           +img('content/media/media-7.jpg','img-cover')
 
-    .section.px-lg-0.px-3.mb-5
-      .content.px-lg-5.px-md-4
-        .color-theme-brand.text-center
-          h2 Почему нужно менять тормозную жидкость вовремя
-        .content__columns
-          p Её состав даёт одно неприятное свойство: гигроскопичность. Проще говоря, жидкость активно впитывает влагу. Как следствие, она теряет свои основные свойства. У только что купленной жидкости для тормозов точка кипения находится на отметке в 260-265 градусов. Но стоит ей разбавиться водой хотя бы на 3-4 процента, как она начнёт закипать уже при 160 градусах.
-          p Учитывая, что в момент резкого торможения температура может подняться вплоть до 200 градусов, ездить с увлажнённой тормозной жидкостью опасно. Если она резко закипит, образовавшийся пар блокирует работу тормозов.
-          p Поэтому разберёмся, в каких ситуациях вам нужно самому заменить тормозную жидкость:
-          ul
-            li После 1,5-3 лет езды. Точный срок рекомендуемой замены определяется моделью автомобиля, качеством используемой жидкости и стилем вождения. Можно также считать по пробегу: заменяйте её каждые 40 тысяч километров пройденного пути.
-            li Если любые другие элементы тормозной системы подвергались ремонту или замене. Скорее всего, при этом в систему попали избыточная влага и посторонние примеси.
-            li В ситуациях, когда машина стояла нетронутой более года. Скорее всего, везде образовался конденсат.
-          p Многие водители предпочитают не тратить время, а просто оставить машину в сервисе. Но знать, как полностью заменить тормозную жидкость, всегда полезно. Это поможет в ситуациях, если нет возможности доехать до автомастера.
+    article(itemprop="articleBody")
+      .section.px-lg-0.px-3.mb-5
+        .content.px-lg-5.px-md-4
+          .color-theme-brand.text-center
+            h2 Почему нужно менять тормозную жидкость вовремя
+          .content__columns
+            p Её состав даёт одно неприятное свойство: гигроскопичность. Проще говоря, жидкость активно впитывает влагу. Как следствие, она теряет свои основные свойства. У только что купленной жидкости для тормозов точка кипения находится на отметке в 260-265 градусов. Но стоит ей разбавиться водой хотя бы на 3-4 процента, как она начнёт закипать уже при 160 градусах.
+            p Учитывая, что в момент резкого торможения температура может подняться вплоть до 200 градусов, ездить с увлажнённой тормозной жидкостью опасно. Если она резко закипит, образовавшийся пар блокирует работу тормозов.
+            p Поэтому разберёмся, в каких ситуациях вам нужно самому заменить тормозную жидкость:
+            ul
+              li После 1,5-3 лет езды. Точный срок рекомендуемой замены определяется моделью автомобиля, качеством используемой жидкости и стилем вождения. Можно также считать по пробегу: заменяйте её каждые 40 тысяч километров пройденного пути.
+              li Если любые другие элементы тормозной системы подвергались ремонту или замене. Скорее всего, при этом в систему попали избыточная влага и посторонние примеси.
+              li В ситуациях, когда машина стояла нетронутой более года. Скорее всего, везде образовался конденсат.
+            p Многие водители предпочитают не тратить время, а просто оставить машину в сервисе. Но знать, как полностью заменить тормозную жидкость, всегда полезно. Это поможет в ситуациях, если нет возможности доехать до автомастера.
 
-    .section.px-lg-0.px-3.mb-4
-      .content.px-lg-5.px-md-4
-        .color-theme-brand.text-center
-          h2 Как заменить тормозную жидкость без прокачки
-        .content__columns
-          p Самый простой способ давно известен даже начинающим автомобилистам. Но так называемая «прокачка» тормозов требует либо помощника, либо постоянной беготни от кабины до каждого отдельного колеса. Можно самостоятельно заменить тормозную жидкость методом проливания.
-          p Сначала вам нужно знать, какой именно тип жидкости сейчас находится в вашем автомобиле. Чаще всего это «дот-4». Ранние модификации считаются устаревшими и уже почти не применяются, а «дот-5» и «дот-5.1» можно встретить в машинах премиум-класса. Купите 1 литровую ёмкость этого же типа. Лучше всего брать одну и ту же марку, но смешивание разных не приведёт ни к чему страшному.
-          p Загоните автомобиль на эстакаду или смотровую яму. Чтобы одному человеку быстро заменить тормозную жидкость, понадобится подобрать 4 небольшие ёмкости и столько же небольших шлангов или трубок. Диаметр нужно подбирать так, чтобы они плотно надевались на штуцеры каждого цилиндра. Один конец трубок надевается на открытый штуцер, а второй опускается в бутылку.
-          p Теперь откройте бачок тормозной жидкости и шприцем или клизмой откачайте как можно больше старой. После чего медленно заливайте новую. Всего вам потребуется примерно литр. Оценивайте объём, вытекающий в каждую ёмкость. После того, как в передние сольётся примерно по 200 мл, а в задние — по 250-300 мл, замену можно считать завершённой. Аккуратно затяните штуцеры и доведите уровень тормозной жидкости в бачке до рекомендуемого. Учтите, что ёмкости будут наполняться неравномерно, поэтому вам придётся делать паузы, чтобы затягивать штуцеры вовремя.
-    .d-flex.justify-content-center.mb-5
-      a.readmore.d-flex.align-items-center.color-theme-brand(href="#")
-        span.h4.mr-2 Другие статьи
-        +icon('readmore','h3 color-theme-brand')
+      .section.px-lg-0.px-3.mb-4
+        .content.px-lg-5.px-md-4
+          .color-theme-brand.text-center
+            h2 Как заменить тормозную жидкость без прокачки
+          .content__columns
+            p Самый простой способ давно известен даже начинающим автомобилистам. Но так называемая «прокачка» тормозов требует либо помощника, либо постоянной беготни от кабины до каждого отдельного колеса. Можно самостоятельно заменить тормозную жидкость методом проливания.
+            p Сначала вам нужно знать, какой именно тип жидкости сейчас находится в вашем автомобиле. Чаще всего это «дот-4». Ранние модификации считаются устаревшими и уже почти не применяются, а «дот-5» и «дот-5.1» можно встретить в машинах премиум-класса. Купите 1 литровую ёмкость этого же типа. Лучше всего брать одну и ту же марку, но смешивание разных не приведёт ни к чему страшному.
+            p Загоните автомобиль на эстакаду или смотровую яму. Чтобы одному человеку быстро заменить тормозную жидкость, понадобится подобрать 4 небольшие ёмкости и столько же небольших шлангов или трубок. Диаметр нужно подбирать так, чтобы они плотно надевались на штуцеры каждого цилиндра. Один конец трубок надевается на открытый штуцер, а второй опускается в бутылку.
+            p Теперь откройте бачок тормозной жидкости и шприцем или клизмой откачайте как можно больше старой. После чего медленно заливайте новую. Всего вам потребуется примерно литр. Оценивайте объём, вытекающий в каждую ёмкость. После того, как в передние сольётся примерно по 200 мл, а в задние — по 250-300 мл, замену можно считать завершённой. Аккуратно затяните штуцеры и доведите уровень тормозной жидкости в бачке до рекомендуемого. Учтите, что ёмкости будут наполняться неравномерно, поэтому вам придётся делать паузы, чтобы затягивать штуцеры вовремя.
+      .d-flex.justify-content-center.mb-5
+        a.readmore.d-flex.align-items-center.color-theme-brand(href="#")
+          span.h4.mr-2 Другие статьи
+          +icon('readmore','h3 color-theme-brand')
 
     .mb-3
       .h2.font-weight-bold.mb-4 Рекомендуем так же:
