--- a/src/pug/service.pug
+++ b/src/pug/service.pug
@@ -11,16 +11,16 @@ block wrapper
     .wrapper.zi-2
       .promo__wrapper.d-flex.flex-column.justify-content-between.py-lg-5.py-md-4.py-3
         .promo__content.mb-3
-          ul.pathway(itemscope="" itemtype="http://schema.org/BreadcrumbList")
-            li(itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem")
+          ul.pathway(itemscope itemtype="http://schema.org/BreadcrumbList")
+            li(itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem")
               a.pathway__link(href="#" itemprop="item")
                 span(itemprop="name") Главная
                 meta(itemprop="position" content="1")
-            li(itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem")
+            li(itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem")
               a.pathway__link(href="#" itemprop="item")
                 span(itemprop="name") Услуги
                 meta(itemprop="position" content="2")
-            li(itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem")
+            li(itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem")
               a.pathway__current(href="#" itemprop="item")
                 span(itemprop="name") Шиномонтаж
                 meta(itemprop="position" content="3")
