--- a/src/pug/articles__cols.pug
+++ b/src/pug/articles__cols.pug
@@ -5,10 +5,11 @@ block meta
 
 block articles__wrapper
   each articles__item in articles
-    .media.media_shadow.media_col
-      a.media__picture.mb-4.mb-md-0(href="#")
-        +img(articles__item.img, 'img-cover')
+    .media.media_shadow.media_col(itemprop="blogPosts" itemscope itemtype="http://schema.org/BlogPosting")
+      a.media__picture.mb-4.mb-md-0(href="#" itemprop="url")
+        +img(articles__item.img, 'img-cover', true)
       .media__meta.flex-grow-1.p-md-4.px-3.pb-4
-        .date.px-2!= articles__item.date
-        a.media__title.d-block.font-weight-bold.mb-lg-2.mb-3(href="#")!= articles__item.title
-        .media__intro.h5!= articles__item.intro
+        .date.px-2(itemprop="datePublished" datetime="2021-10-23")!= articles__item.date
+        a.media__title.d-block.font-weight-bold.mb-lg-2.mb-3(href="#" itemprop="headline")!= articles__item.title
+        .media__intro.h5(itemprop="description")!= articles__item.intro
+        span.d-none(itemprop="author") ДонШина Ростов
