--- a/src/pug/filter-motowheels.pug
+++ b/src/pug/filter-motowheels.pug
@@ -14,12 +14,12 @@ block filter
 
 block wrapper
     .wrapper
-      ul.pathway(itemscope="" itemtype="http://schema.org/BreadcrumbList")
-        li(itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem")
+      ul.pathway(itemscope itemtype="http://schema.org/BreadcrumbList")
+        li(itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem")
           a.pathway__link(href="#" itemprop="item")
             span(itemprop="name") Главная
             meta(itemprop="position" content="1")
-        li(itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem")
+        li(itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem")
           a.pathway__current(href="#" itemprop="item")
             span(itemprop="name") #{title}
             meta(itemprop="position" content="2")
