--- a/src/pug/sales-item.pug
+++ b/src/pug/sales-item.pug
@@ -5,16 +5,16 @@ block meta
 
 block wrapper
   .wrapper
-    ul.pathway(itemscope="" itemtype="http://schema.org/BreadcrumbList")
-      li(itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem")
+    ul.pathway(itemscope itemtype="http://schema.org/BreadcrumbList")
+      li(itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem")
         a.pathway__link(href="#" itemprop="item")
           span(itemprop="name") Главная
           meta(itemprop="position" content="1")
-      li(itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem")
+      li(itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem")
         a.pathway__link(href="#" itemprop="item")
             span(itemprop="name") Скидки и акции
             meta(itemprop="position" content="2")
-      li(itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem")
+      li(itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem")
         a.pathway__current(href="#" itemprop="item")
             span(itemprop="name") Скидки на зимние шины Michelin
             meta(itemprop="position" content="3")
